exageostat_parsec/hicma/chameleon/control/morse_zf90.F90


      interface
         function MORSE_zgesvd_Tile_c(jobu,jobvt,A,S,U,VT,T) &
          & bind(c, name='MORSE_zgesvd_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgesvd_Tile_c
            integer(kind=c_int), value :: jobu
            integer(kind=c_int), value :: jobvt
            type(c_ptr), value :: A
            type(c_ptr), value :: S
            type(c_ptr), value :: U
            type(c_ptr), value :: VT
            type(c_ptr), value :: T
          end function MORSE_zgesvd_Tile_c
      end interface

      interface
         function MORSE_zgetrf_Tile_c(A,IPIV) &
          & bind(c, name='MORSE_zgetrf_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgetrf_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: IPIV
          end function MORSE_zgetrf_Tile_c
      end interface

      interface
         function MORSE_zgetrf_incpiv_Tile_c(A,L,IPIV) &
          & bind(c, name='MORSE_zgetrf_incpiv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgetrf_incpiv_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: L
            type(c_ptr), value :: IPIV
          end function MORSE_zgetrf_incpiv_Tile_c
      end interface

      interface
         function MORSE_zgetrf_nopiv_Tile_c(A) &
          & bind(c, name='MORSE_zgetrf_nopiv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgetrf_nopiv_Tile_c
            type(c_ptr), value :: A
          end function MORSE_zgetrf_nopiv_Tile_c
      end interface

      interface
         function MORSE_zgetri_Tile_c(A,IPIV) &
          & bind(c, name='MORSE_zgetri_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgetri_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: IPIV
          end function MORSE_zgetri_Tile_c
      end interface

      interface
         function MORSE_zgetrs_Tile_c(trans,A,IPIV,B) &
          & bind(c, name='MORSE_zgetrs_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgetrs_Tile_c
            integer(kind=c_int), value :: trans
            type(c_ptr), value :: A
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: B
          end function MORSE_zgetrs_Tile_c
      end interface

      interface
         function MORSE_zgetrs_incpiv_Tile_c(A,L,IPIV,B) &
          & bind(c, name='MORSE_zgetrs_incpiv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgetrs_incpiv_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: L
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: B
          end function MORSE_zgetrs_incpiv_Tile_c
      end interface

      interface
         function MORSE_zheev_Tile_c(jobz,uplo,A,W,T,Q,LDQ) &
          & bind(c, name='MORSE_zheev_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zheev_Tile_c
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: W
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
          end function MORSE_zheev_Tile_c
      end interface

      interface
         function MORSE_zheevd_Tile_c(jobz,uplo,A,W,T,Q,LDQ) &
          & bind(c, name='MORSE_zheevd_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zheevd_Tile_c
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: W
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
          end function MORSE_zheevd_Tile_c
      end interface

      interface
         function MORSE_zhegst_Tile_c(itype,uplo,A,B) &
          & bind(c, name='MORSE_zhegst_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zhegst_Tile_c
            integer(kind=c_int), value :: itype
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
          end function MORSE_zhegst_Tile_c
      end interface

      interface
         function MORSE_zhegv_Tile_c(itype,jobz,uplo,A,B,W,T,Q) &
          & bind(c, name='MORSE_zhegv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zhegv_Tile_c
            integer(kind=c_int), value :: itype
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            type(c_ptr), value :: W
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
          end function MORSE_zhegv_Tile_c
      end interface

      interface
         function MORSE_zhegvd_Tile_c(itype,jobz,uplo,A,B,W,T,Q) &
          & bind(c, name='MORSE_zhegvd_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zhegvd_Tile_c
            integer(kind=c_int), value :: itype
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            type(c_ptr), value :: W
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
          end function MORSE_zhegvd_Tile_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function MORSE_zhemm_Tile_c(side,uplo,alpha,A,B,beta,C) &
          & bind(c, name='MORSE_zhemm_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zhemm_Tile_c
            integer(kind=c_int), value :: side
            integer(kind=c_int), value :: uplo
            complex(kind=c_double_complex), value :: alpha
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            complex(kind=c_double_complex), value :: beta
            type(c_ptr), value :: C
          end function MORSE_zhemm_Tile_c
      end interface
#endif

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function MORSE_zher2k_Tile_c(uplo,trans,alpha,A,B,beta,C) &
          & bind(c, name='MORSE_zher2k_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zher2k_Tile_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: trans
            complex(kind=c_double_complex), value :: alpha
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            real(kind=c_double), value :: beta
            type(c_ptr), value :: C
          end function MORSE_zher2k_Tile_c
      end interface
#endif

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function MORSE_zherk_Tile_c(uplo,trans,alpha,A,beta,C) &
          & bind(c, name='MORSE_zherk_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zherk_Tile_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: trans
            real(kind=c_double), value :: alpha
            type(c_ptr), value :: A
            real(kind=c_double), value :: beta
            type(c_ptr), value :: C
          end function MORSE_zherk_Tile_c
      end interface
#endif

      interface
         function MORSE_zhetrd_Tile_c(jobz,uplo,A,D,E,T,Q,LDQ) &
          & bind(c, name='MORSE_zhetrd_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zhetrd_Tile_c
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: D
            type(c_ptr), value :: E
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
          end function MORSE_zhetrd_Tile_c
      end interface

      interface
         function MORSE_zlacpy_Tile_c(uplo,A,B) &
          & bind(c, name='MORSE_zlacpy_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zlacpy_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
          end function MORSE_zlacpy_Tile_c
      end interface

      interface
         function MORSE_zlange_Tile_c(norm,A,work) &
          & bind(c, name='MORSE_zlange_Tile')
            use iso_c_binding
            implicit none
            real(kind=c_double) :: MORSE_zlange_Tile_c
            integer(kind=c_int), value :: norm
            type(c_ptr), value :: A
            type(c_ptr), value :: work
          end function MORSE_zlange_Tile_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function MORSE_zlanhe_Tile_c(norm,uplo,A,work) &
          & bind(c, name='MORSE_zlanhe_Tile')
            use iso_c_binding
            implicit none
            real(kind=c_double) :: MORSE_zlanhe_Tile_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: work
          end function MORSE_zlanhe_Tile_c
      end interface
#endif

      interface
         function MORSE_zlansy_Tile_c(norm,uplo,A,work) &
          & bind(c, name='MORSE_zlansy_Tile')
            use iso_c_binding
            implicit none
            real(kind=c_double) :: MORSE_zlansy_Tile_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: work
          end function MORSE_zlansy_Tile_c
      end interface

      interface
         function MORSE_zlaset_Tile_c(uplo,alpha,beta,A) &
          & bind(c, name='MORSE_zlaset_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zlaset_Tile_c
            integer(kind=c_int), value :: uplo
            complex(kind=c_double_complex), value :: alpha
            complex(kind=c_double_complex), value :: beta
            type(c_ptr), value :: A
          end function MORSE_zlaset_Tile_c
      end interface

      interface
         function MORSE_zlaswp_Tile_c(A,K1,K2,IPIV,INCX) &
          & bind(c, name='MORSE_zlaswp_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zlaswp_Tile_c
            type(c_ptr), value :: A
            integer(kind=c_int), value :: K1
            integer(kind=c_int), value :: K2
            type(c_ptr), value :: IPIV
            integer(kind=c_int), value :: INCX
          end function MORSE_zlaswp_Tile_c
      end interface

      interface
         function MORSE_zlaswpc_Tile_c(A,K1,K2,IPIV,INCX) &
          & bind(c, name='MORSE_zlaswpc_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zlaswpc_Tile_c
            type(c_ptr), value :: A
            integer(kind=c_int), value :: K1
            integer(kind=c_int), value :: K2
            type(c_ptr), value :: IPIV
            integer(kind=c_int), value :: INCX
          end function MORSE_zlaswpc_Tile_c
      end interface
